# demo-etro-heat-island

./: DEMO_INFO.md  README.md
backend/: app.py  create_heatmap.py  pyproject.toml  requirements.txt  test_aruco_unittest.py  test_heatmap.py  test_request_handling.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: HeatmapDisplay.vue  ScenarioSelect.vue  WeatherItem.vue  WebcamDisplay.vue
frontend/src/router/: index.ts
frontend/src/stores/: cms.ts
frontend/src/utils/: heatmap.ts
frontend/src/views/: HomeView.vue  InteractiveView.vue
