[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "numpy==1.26",
    "opencv-python-headless==4.8.1.78",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "scikit-learn==1.2.2",
]
